# XXEJ_scanner

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/XXEJ_scanner/: __init__.py  bam_evidence.py  breakpoints.py  classify.py  cli.py  coverage.py  genotype.py  io.py  models.py  reference.py  utils.py  validation.py
tests/: test_bam_evidence.py  test_breakpoints.py  test_classify.py  test_io.py  test_package_init.py  test_reference.py
