[project]
name = "xxej-scanner"
version = "0.1.0"
description = "Rule-based scanner for CUT&Tag-enriched XXEJ repair-associated events."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pysam>=0.22.0",
]

[project.scripts]
XXEJ_scanner = "XXEJ_scanner.cli:main"
xxej-scanner = "XXEJ_scanner.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/XXEJ_scanner"]

[tool.uv]
package = true
